i18n/ja/docusaurus-plugin-content-docs/version-21/FormObjects/properties_Headers.md
---
id: propertiesHeaders
title: ヘッダー
---

## ヘッダーを表示

このプロパティは、[リストボックスカラムのヘッダー](listbox-header-footer.md#ヘッダー) の表示/非表示を指定するのに使用されます。 列ごとに 1つのヘッダーを表示できます。 それぞれのヘッダーは個別に設定できます。

#### JSON 文法

| 名称          | データタイプ  | とりうる値       |
| ----------- | ------- | ----------- |
| showHeaders | boolean | true, false |

#### 対象オブジェクト

[リストボックス](listbox_overview.md)

#### コマンド

[LISTBOX Get property](../commands/listbox-get-property.md) - [LISTBOX SET PROPERTY](../commands/listbox-set-property.md)

---

## 高さ

このプロパティは、リストボックスヘッダーの高さを **行** または **ピクセル** 単位で指定します。 同じリストボックス内で異なる単位を使用することもできます: 同じリストボックス内で異なる単位を使用することもできます:

- *ピクセル* - 指定された値は当該行に対し直接適用され、列が使用しているフォントサイズ等は考慮されません。 フォントが行の高さに対して大きい場合、テキストは切り取られます。 ピクチャーはフォーマットに基づき、切り取られるかリサイズされます。 フォントが行の高さに対して大きい場合、テキストは切り取られます。 ピクチャーはフォーマットに基づき、切り取られるかリサイズされます。

- *行* - 高さは行のフォントサイズに合わせて計算されます。
  - 複数の異なるサイズが設定されている場合、4D はもっとも大きなものを使用します。 たとえば、行に "Verdana 18", "Geneva 12" そして "Arial 9" が設定されている場合、4D は行の高さの決定に "Verdana 18" を使用します。 複数行の場合はこの高さの倍数が使用されます。
  - この計算にはピクチャーのサイズや、フォントに適用されるスタイルは考慮されません。
  - macOS 環境下では、選択されたフォントで使用できない文字をユーザーが入力した場合、行の高さが正しくなくなる可能性があります。 この場合には代理フォントが使用され、その結果サイズにばらつきが出る可能性があります。
    &#062; This property can also be set dynamically using the <a href="https://doc.4d.com/4Dv20/4D/20.6/LISTBOX-SET-FOOTERS-HEIGHT.301-7487629.en.html">LISTBOX SET FOOTERS HEIGHT</a> command.

> このプロパティは、[LISTBOX SET HEADERS HEIGHT](../commands-legacy/listbox-set-headers-height.md) コマンドを使用することで動的に設定することも可能です。

単位の変換: 単位を変更した場合、4D は自動で値を再計算し、結果をプロパティリストに表示します。 たとえば、使用されるフォントが "Lucida grande 24" で高さが "1 行" に設定されていれば "30 ピクセル" に、高さが "60 ピクセル" なら "2 行" になります。

単位の変更を繰り返すと、4D が自動で計算を行うため、最初の値とは結果が異なってしまうこともあります。 たとえば以下のようになります:

- (フォント Arial 18)\*: 52 ピクセル -> 2行 -> 40 ピクセル
- (フォント Arial 12)\*: 3 ピクセル -> 0.4行が 1行に切り上げられる -> 19 ピクセル

#### JSON 例

```
 "List Box": {
  "type": "listbox",
  "showHeaders": true,
  "headerHeight": "22px",  
  ...
  }
```

#### JSON 文法

| 名称           | データタイプ | とりうる値                                     |
| ------------ | ------ | ----------------------------------------- |
| headerHeight | string | 正の10進数 + px &#124; em |

#### 対象オブジェクト

[リストボックス](listbox_overview.md)

#### コマンド

[`LISTBOX Get headers height`](../commands-legacy/listbox-get-headers-height.md) - [`LISTBOX SET HEADERS HEIGHT`](../commands-legacy/listbox-set-headers-height.md)

#### 参照

[フッター](properties_Footers.md) - [リストボックスヘッダー](listbox-header-footer.md#ヘッダー)
